--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ p {
     font-size: 30px;
 }
 body {
-    background-color: rgb(0, 0, 0);
+    background-color: black;
 }
 button {
   background-color: purple;
