--- a/style.css
+++ b/style.css
@@ -1,41 +1,50 @@
 h1 {
-    color: rgb(255, 255, 255) ;
+    color: rgb(255, 255, 255);
     font-size: 60px;
     text-align: center;
     font-weight: bold;
 }
+
 p {
     color: rgb(255, 255, 255);
     text-align: center;
     font-size: 30px;
 }
+
 body {
     background-color: black;
+    margin: 0;
+    font-family: Arial, sans-serif;
 }
+
 button {
-  background-color: purple;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  width: 200px;
-  border-radius: 10px;
+    background-color: purple;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    width: 200px;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
 }
+
 button:hover {
     box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(255, 255, 255, 0.19);
-  }
+}
+
 .container {
-    display: flex; /* Enables CSS flexbox */
-    justify-content: center; /* Centers horizontally */
-    margin: 0;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
     padding: 10px;
-    background-color: black;
- }
- .center {
+}
+
+.center {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-  }
+}
