--- a/style.css
+++ b/style.css
@@ -3,8 +3,12 @@ h1 {
     font-size: 60px;
     text-align: center;
     font-weight: bold;
+    font-family: 'JazzyRabbit', Arial, sans-serif;
 }
-
+h2 {
+    font-size: 45px;
+    font-family: 'JazzyRabbit', Arial, sans-serif;
+}
 p {
     color: rgb(255, 255, 255);
     text-align: center;
@@ -16,7 +20,7 @@ li {
 body {
     background-color: black;
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'RaelaGrotesque', Arial, sans-serif;
 }
 
 button {
