--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ h1 {
 
 h2 {
     font-size: 2.2rem;
+    text-align: center;
     margin: 1.5rem 0 1rem 0;
     color: var(--text-primary);
     font-weight: 600;
